made some changes about training